syntax = "proto3";

package igrpc;
import "product.proto";

// 获取消息模板所需要的订单信息

// {订单号，布匹颜色数量单位列表信息={颜色信息，面料信息，数量，单位:米/匹, 总重量}, 仓管员, 仓库地点, 收货地点, 订单总金额, 更新时间}
message SaleOrder{
    int64 SaleOrderId = 1;
    int64 SaleOrderItemId = 2;
}

message WarehouseManagerMessage {
    string    Name = 1;                        // 姓名
    int64     Id = 2;                          // 用户ID
    repeated  ColorPatternRelationship ColorPatternRelationships = 3;    // 商品信息列表
    string    SaleOrderNo = 4;                 // 订单编号
}
message WarehouseManagers {
    repeated WarehouseManagerMessage WarehouseManagerMessages  =1 ;
} 

message ShopMessage{
    string SaleOrderNo = 1;                    // 订单编号
    int64 Id = 2;                              // 用户ID
    repeated ColorPatternRelationship ColorPatternRelationships = 3;     // 商品信息列表
    string DeliveriedAtPlaceName = 4;          // 交货地点名称
    string OutbundedAtPlaceName = 5;           // 发货地点名称
    int64 TotalAmount = 6;                     // 总金额
    int64 CompanyId = 7;                       // 公司ID
    string Tel = 8;                            // 联系电话
}

message ManagerAccount {
    int64 CompanyId = 1;
    int64 OrgId =2;
}

// 当日营业额统计
message TurnoverStatistics {
    int64 TotalOrders = 1;  // 总订单数
    int64 TotalAmount = 2;  // 总金额
    int64 ActualAmount = 3; // 实收金额
}

message GeneralMangerMessage{
    int64 CompanyId  = 1;
    int64 UserId = 2;
    TurnoverStatistics TurnoverStatistics = 3;
}

message GeneralMangerMessages {
    repeated GeneralMangerMessage GeneralMangerMessages = 1;
}
